Fixed mobile covers (again)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -305,13 +305,13 @@ box-shadow: 0px -2px 0px rgb(212, 139, 99);
 }
 @media (pointer: none) { 
 
-    .hero-card, .hero .hero-card-cover{
+     .hero-card-cover{
         display: none;
     }
 } 
 @media (pointer: coarse) { 
 
-    .hero-card, .hero .hero-card-cover{
+     .hero-card-cover{
         display: none;
     }
 } 
